--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,9 @@
     "cobe": "^0.6.3",
     "embla-carousel-react": "^8.1.3",
     "framer-motion": "^11.12.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.383.0",
+    "music-metadata": "^10.6.4",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
