--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "node-cache": "^5.1.2",
+    "nodemon": "^3.1.9",
     "socket.io": "^4.8.1"
   }
 }
